--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                                     <i class="lni-bolt"></i>
                                 </div>
                                 <div class="services-content media-body">
-                                    <h4 class="services-title">Startup</h4>
-                                    <p class="text">Short description for the ones</br> who look for something new.</p>
+                                    <h4 class="services-title">AI Power</h4>
+                                    <p class="text">Don't know what to wear ? Use our chatbot to clear your confusion </p>
                                 </div>
                             </div> <!-- services content -->
                         </div>
@@ -138,8 +138,8 @@
                                     <i class="lni-bar-chart"></i>
                                 </div>
                                 <div class="services-content media-body">
-                                    <h4 class="services-title">SaaS Business</h4>
-                                    <p class="text">Short description for the ones</br> who look for something new.</p>
+                                    <h4 class="services-title">Business</h4>
+                                    <p class="text">Be a Aerocart's seller and start selling on our website</p>
                                 </div>
                             </div> <!-- services content -->
                         </div>
@@ -149,8 +149,8 @@
                                     <i class="lni-brush"></i>
                                 </div>
                                 <div class="services-content media-body">
-                                    <h4 class="services-title">Agency</h4>
-                                    <p class="text">Short description for the ones</br> who look for something new.</p>
+                                    <h4 class="services-title">Connect</h4>
+                                    <p class="text">Share your dress combination and let people rate it</p>
                                 </div>
                             </div> <!-- services content -->
                         </div>
@@ -160,8 +160,8 @@
                                     <i class="lni-bulb"></i>
                                 </div>
                                 <div class="services-content media-body">
-                                    <h4 class="services-title">App Landing</h4>
-                                    <p class="text">Short description for the ones</br> who look for something new.</p>
+                                    <h4 class="services-title">Discover Fashion</h4>
+                                    <p class="text">Start discovering new fashion using our story feature</p>
                                 </div>
                             </div> <!-- services content -->
                         </div>
