--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <div class="col-lg-6">
                     <div class="call-action-content text-center">
                         <h2 class="call-title">Curious to Learn More? Stay Tuned</h2>
-                        <p class="text">You let us know whenever you want us to update anything or think something can be optimised.</p>
+                        <p class="text">Subscribe our news letter get updates directly in your inbox.</p>
                         <div class="call-newsletter">
                             <i class="lni-envelope"></i>
                             <input type="text" placeholder="john@email.com">
@@ -213,8 +213,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section-title text-center pb-10">
-                        <h4 class="title">Get In touch</h4>
-                        <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+                        <h4 class="title">Let Build it together !</h4>
+                        <p class="text">You let us know whenever you want us to update anything or think something can be optimised</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
