--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <div class="col-lg-6">
                     <div class="call-action-content text-center">
                         <h2 class="call-title">Curious to Learn More? Stay Tuned</h2>
-                        <p class="text">Subscribe our news letter get updates directly in your inbox.</p>
+                        <p class="text">Subscribe our newsletter to get updates directly in your inbox.</p>
                         <div class="call-newsletter">
                             <i class="lni-envelope"></i>
                             <input type="text" placeholder="john@email.com">
