--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <p class="text">Subscribe our newsletter to get updates directly in your inbox.</p>
                         <div class="call-newsletter">
                             <i class="lni-envelope"></i>
-                            <input type="text" placeholder="john@email.com">
+                            <input type="text" placeholder="vivek@email.com">
                             <button type="submit">SUBSCRIBE</button>
                         </div>
                     </div> <!-- slider-content -->
