--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                             <h6 class="footer-title">Help & Support</h6>
                             <ul>
                                 <li><a href="#">Support Center</a></li>
-                                <li><a href="#">FAQ</a></li>
+                                <li><a href="https://aerocarts.github.io/FAQ/">FAQ</a></li>
                                 <li><a href="#">Terms & Conditions</a></li>
                             </ul>
                         </div> <!-- footer link -->
