--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <p class="text">Welcome to Aerocart</p>
                             <ul class="header-btn">
                                 <li><a class="main-btn btn-one" rel="nofollow" href="#">LAUNCHING SOON</a></li>
-                                <li><a class="main-btn btn-two video-popup" href="video.mp4">WATCH THE VIDEO <i class="lni-play"></i></a></li>
+                                <li><a class="main-btn btn-two video-popup" href="red.mp4">WATCH THE VIDEO <i class="lni-play"></i></a></li>
                             </ul>
                         </div> <!-- header content -->
                     </div>
